--- a/src/lenya/pubs/erp/index.xhtml
+++ b/src/lenya/pubs/erp/index.xhtml
@@ -1,10 +1,17 @@
 <?xml version="1.0"?>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <link rel="cms.client" type="application/x.osr+xml" href="tasks/introspection.xml" title="OSR-101"/>
+</head>
 <body>
 <h1>Enterprise Resource Planning</h1>
 <p>
 List all <a href="tasks/">tasks</a>
+</p>
+
+<p>
+<a href="erp.xtm">Topic-Map</a>
 </p>
 </body>
 </html>
