list owners and projects

--- a/src/lenya/pubs/erp/index.xhtml
+++ b/src/lenya/pubs/erp/index.xhtml
@@ -9,6 +9,12 @@
 <p>
 List all <a href="tasks/">tasks</a>
 </p>
+<p>
+List all <a href="projects/">projects</a>
+</p>
+<p>
+List all <a href="owners/">owners</a>
+</p>
 
 <p>
 <a href="erp.xtm">Topic-Map</a>
