customers and invoices added

--- a/src/lenya/pubs/erp/index.xhtml
+++ b/src/lenya/pubs/erp/index.xhtml
@@ -8,12 +8,25 @@
 <h1>Enterprise Resource Planning</h1>
 <p>
 List all <a href="tasks/">tasks</a>
+<br/>
+List my <a href="tasks/?lenya.usecase=list.my.tasks">tasks</a>
+<br/>
+View a specific <a href="tasks/task-xxx">task</a>
 </p>
 <p>
 List all <a href="projects/">projects</a>
 </p>
 <p>
-List all <a href="owners/">owners</a>
+List all <a href="persons/">persons</a>
+</p>
+
+<hr/>
+
+<p>
+List all <a href="customers/">customers</a>
+</p>
+<p>
+List all <a href="invoices/">invoices</a>
 </p>
 
 <p>
