may sitemap added

--- a/may/src/main/webapps/cocoon/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/may/index.xhtml
@@ -15,6 +15,12 @@
 <title>Wyona May ERP</title>
 </head>
 <body>
+<p>
 Wyona May ERP
+</p>
+
+<p>
+<a href="http://validator.w3.org/">XHTML Validator</a>
+</p>
 </body>
 </html>
