--- a/may/src/main/webapps/cocoon/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/may/index.xhtml
@@ -15,8 +15,20 @@
 <title>Wyona May ERP</title>
 </head>
 <body>
+<h1>Wyona May ERP</h1>
+
 <p>
-Wyona May ERP
+<a href="projects/">Projects</a>
+<br/>
+<a href="invoices/">Invoices</a>
+<br/>
+<a href="offers/">Offers</a>
+<br/>
+<a href="persons/">Persons</a>
+<br/>
+<a href="tasks/">Tasks</a>
+<br/>
+<a href="weekly-plans/">Weekly Plans</a>
 </p>
 
 <p>
