other data types added

--- a/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
@@ -20,15 +20,23 @@
 <p>
 <a href="projects/">Projects</a>
 <br/>
+<a href="customers/">Customers</a>
+<br/>
 <a href="invoices/">Invoices</a>
 <br/>
 <a href="offers/">Offers</a>
 <br/>
 <a href="persons/">Persons</a>
 <br/>
+<a href="employees/">Employees</a>
+<br/>
 <a href="tasks/">Tasks</a>
 <br/>
 <a href="weekly-plans/">Weekly Plans</a>
+<br/>
+<a href="contracts/">Contracts</a>
+<br/>
+<a href="brochures/">Brochures</a>
 </p>
 
 <p>
