--- a/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
@@ -17,6 +17,7 @@
 <body>
 <h1>Wyona May ERP</h1>
 
+<h2>Data Types</h2>
 <p>
 <a href="projects/">Projects</a>
 <br/>
@@ -39,6 +40,14 @@
 <a href="brochures/">Brochures</a>
 </p>
 
+<h2>Functionalities</h2>
+<ul>
+<li>Show me all open (not paid yet) invoices</li>
+<li>Show me all "not invoiced yet" invoices</li>
+<li>Show me all "not invoiced yet" tasks</li>
+</ul>
+
+<h2>Misc</h2>
 <p>
 <a href="http://validator.w3.org/">XHTML Validator</a>
 </p>
