differentiated between creditors and debtors

--- a/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
@@ -23,7 +23,9 @@
 <br/>
 <a href="customers/">Customers</a>
 <br/>
-<a href="invoices/">Invoices</a>
+<a href="invoices/">Invoices</a> (Debtors)
+<br/>
+Invoices (Creditors)
 <br/>
 <a href="offers/">Offers</a>
 <br/>
