link to open invoices added

--- a/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/may/index.xhtml
@@ -44,7 +44,7 @@ Invoices (Creditors)
 
 <h2>Functionalities</h2>
 <ul>
-<li>Show me all open (not paid yet) invoices</li>
+<li>Show me all <a href="invoices/open.html">open</a> (not paid yet) invoices</li>
 <li>Show me all "not invoiced yet" invoices</li>
 <li>Show me all "not invoiced yet" tasks</li>
 </ul>
