sample link added

--- a/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/samples/may/index.xhtml
+++ b/may/src/main/webapps/cocoon/src/blocks/wyona-may-erp/samples/may/index.xhtml
@@ -17,6 +17,8 @@
 <body>
 <h1>Wyona May ERP</h1>
 
+<a href="repo-erp-sample/companies/wyona/content.xml">Generic access</a>
+
 <h2>Data Types</h2>
 <p>
 <a href="projects/">Projects</a>
